# prompthound

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
plans/: PLAN_SQL_SUBCOMMAND.md  issue-4-plan-20251120.md
src/prompthound/: __init__.py  cli.py  logconfig.py
tests/: test_cli.py  test_vendor.py
tests/data/: Pluralistic_archive_sample.xml  Pluralistic_archive_sample_lxml.xml
