[project]
name = "prompthound"
version = "0.1.0"
description = "An experimental framework integrating AI into memex methods"
readme = "README.md"
authors = [
    { name = "Brian Dennis", email = "bmd@pirateninja.dev" }
]
requires-python = ">=3.11"
dependencies = [
    "click==8.1.8",
    "click-default-group",
    "click-spinner",
    "feedparser",
    "htmd-py",
    "llm",
    "llm-lmstudio @ git+https://github.com/agustif/llm-lmstudio.git",
    "llm-mlx",
    "lmstudio",
    "loguru",
    "pluggy",
    "pydantic-ai-slim[anthropic,cli,huggingface,openai]",
    "sentencepiece",
    "ttok",
    "typer",
    "platformdirs",
    "sqlite-utils",
    "httpx",
    "feedparser",
    "unidecode",
    "regex",
    "loguru-config",
]

[project.urls]
Repository = "https://github.com/crossjam/prompthound"

[project.scripts]
prompthound = "prompthound.cli:cli"


[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "clai>=0.7.2",
    "poethepoet>=0.37.0",
    "ptpython",
    "pytest>=8.4.1",
    "ruff>=0.14.5",
    "ty>=0.0.1a27",
    "types-python-dateutil>=2.8.0",    
]

[tool.uv.sources]
loguru-config = { git = "https://github.com/crossjam/loguru-config" }
